NXP-32992: Move http servlet request/response mock to web common